current work in progress

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="webp">
 <head>
 	<meta name="description" content="Wilshire Law Firm is a award-winning personal injury, car accident, employment &amp; class action law firm. GET HELP TODAY!">
 
@@ -12,7 +12,7 @@
 
 {{ partial "hero.html" . }}
 
-{{ partial "subhero.html" . }}
+{{ partial "herolower.html" . }}
 
 {{ partial "capabilities.html" . }}
 
