--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -5,8 +5,8 @@
                 <div class="hero__headline">
                     <h1 class="d-sm-block d-md-none">
                         <div class="headline__big-text big_text1">
-                            <span>YOU DON'T PAY UNLESS</span>
-                            <span>YOU WIN</span>
+                            <span>YOU DON'T PAY</span>
+                            <span>UNLESS YOU WIN</span>
                         </div>
                     </h1>
                     <h2 class="d-sm-block d-md-none headline__big-text big_text2">
@@ -25,21 +25,16 @@
                 </div>
 
                 <div class="standard hero__attorneys">
-                    <picture class="d-sm-block d-md-none">
-                        <source data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop-mobile.webp" type="image/webp" class="img-fluid lazyload">
-                        <source data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop-mobile.png" type="image/png" class="img-fluid lazyload">
-                        <img data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop-mobile.png" data-src="{{ .Site.BaseURL }}img/attorney-backdrop-mobile.png" class="img-fluid lazyload" alt="Wilshire Law Firm Attorneys">
-                    </picture>
+                    <div class="d-sm-block d-md-none">
 
-                    <div class="hero__attorneys-img d-none d-md-block">
-                        <picture>
-                            <source data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop.webp" type="image/webp" class="standard img-fluid lazyload" alt="Wilshire Law Firm Attorneys">
-                            <source data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop.png" type="image/png" class="standard img-fluid lazyload" alt="Wilshire Law Firm Attorneys">
-                            <img data-srcset="{{ .Site.BaseURL }}img/attorney-backdrop.png" data-src="{{ .Site.BaseURL }}img/attorney-backdrop.png" class="standard img-fluid lazyload" alt="Wilshire Law Firm Attorneys">
-                        </picture>
+                    </div>
+
+                    <div class="d-none d-md-block">
+
                     </div>
                 </div>
             </div>
+
             <div class="wlf-form text-center whywlf d-none d-md-flex" id="wlf-form">
                 <div class="wlf-form__container">
                     <div class="hero__form-title">FREE CONSULTATION 24/7</div>
