--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,58 +1,33 @@
 <section class="capabilities">
-  <div class="container practice-areas">
-    <h2><span style="">WHAT WE CAN DO FOR YOU</span></h2>
-    <hr style="background-color:  transparent">
-    <div class="row">
-      <div class="what-we-can-do-container">
-        <div class="speciality">
-          <div class="capability max-compensation"></div>
-          <div class="messaging">
-            <span>Maximum<br>Compensation</span>
-          </div>
+    <div class="container practice-areas">
+        <h2 class="text-center"><span style="">WHAT WE CAN DO FOR YOU</span></h2>
+        <div class="what-we-can-do-container">
+            <div class="specialty">
+                <div class="capability capability__max-compensation icon-cash_advance">
+                </div>
+                <span class="capability__message">Receive Maximum Compensation</span>
+            </div>
+            <div class="specialty">
+                <div class="capability capability__medical-paid icon-staff-of-hermes">
+                </div>
+                <span class="capability__message">Discrete And Professional</span>
+            </div>
+            <div class="specialty">
+                <div class="capability capability__cash-advance icon-cash_icon">
+                </div>
+                <span class="capability__message">We'll Come To You</span>
+            </div>
+
+            <div class="specialty">
+                <div class="capability capability__income-recovery icon-pay_off_medical_bills">
+                </div>
+                <span class="capability__message">Recovery Of Lost Wages</span>
+            </div>
+            <div class="specialty">
+                <div class="capability capability__fix-car icon-complementary_transportation">
+                </div>
+                <span class="capability__message">Justice</span>
+            </div>
         </div>
-        <div class="speciality">
-          <div class="capability medical-paid"></div>
-          <div class="messaging">
-            <span>Get Your<br>Medical Bills Paid</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability cash-advance"></div>
-          <div class="messaging">
-            <span>Cash Advance<br>On Your Case</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability income-recovery"></div>
-          <div class="messaging">
-            <span>Recovery of<br>Lost Wages</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability fix-car"></div>
-          <div class="messaging">
-            <span>Vehicle Repaired<br>or Replaced</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability we-come"></div>
-          <div class="messaging">
-            <span>We Come To<br>Your Location</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability medical-appts"></div>
-          <div class="messaging">
-            <span>Access to Top<br>Medical Specialists</span>
-          </div>
-        </div>
-        <div class="speciality">
-          <div class="capability transport"></div>
-          <div class="messaging">
-            <span>Complimentary<br>Transportation</span>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
