--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -19,6 +19,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         background: #3c4e66;
     }
 
+
     .u-remove-all-padding {
         padding: 0!important
     }
@@ -37,16 +38,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         }
     }
 
-    .header {
-        display: flex;
-        justify-content: space-between
-    }
 
-    .section-header-logo {
-        justify-content: center;
-        padding: 5px;
-        width: 100%
-    }
 
     @media only screen and (max-width:767px) {
         .section-header-logo {
@@ -55,9 +47,37 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             display: flex;
             justify-content: center;
             width: 100%
+            justify-content: center;
         }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+        }
+        .section-header-right img{
+            margin: 5px auto;
+        }
+        .section-header-logo img{
+            padding-right:5px;
+        }
+
     }
 
+    .section-header-logo, .section-footer-logo {
+        justify-content: left;
+        width: 25%;
+    }
+
+    .section-header-right {
+        width: 75%;
+        display: flex;
+        flex-direction: column;
+        line-height: normal;
+        padding-left: 5px;
+        padding-right: 5px;
+        justify-content: center;
+        visibility: hidden;
+    }
     .subhero__phone-num {
         align-items: center;
         display: flex;
@@ -65,11 +85,15 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         -webkit-align-items: center;
         -webkit-justify-content: center;
         font-size: 22px;
-        font-weight: 700;
+        font-weight: 400;
         height: 40px;
         justify-content: center;
         letter-spacing: 1.5px;
-        width: 100%
+        width: 100%;
+    }
+
+    .subhero__phone-num{
+        color: #fff;
     }
 
     a.subhero__phone-num:hover {
@@ -127,26 +151,13 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
     @media only screen and (max-width:767px) {
         .hablamos24 {
-            color: #000
-        }
-    }
-
-    .hablamos24,
-    .hablamos24__wrap {
-        background: #555;
-        color: #fff
-    }
-
-    @media only screen and (max-width:767px) {
-        .hablamos24__wrap {
-            background: #ffa800;
-            color: #0c1c42!important
+            color: #f16825;
+            text-align: center;
         }
     }
 
     @media only screen and (max-width:767px) {
         .hablamos24 {
-            background: #ffa800;
             width: 100%
         }
         .hablamos24 a {
@@ -163,13 +174,14 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     }
 
     .hablamos24__wrap {
-        align-items: stretch;
-        background: #ffa800;
-        font-size: 15px;
+        font-size: 12px;
         font-weight: 700;
         display: -webkit-flex;
         display: flex;
-        padding: 0
+        padding: 0;
+        text-align: center;
+        width: 100%;
+        justify-content: center;
     }
 
     @media only screen and (max-width:767px) {
@@ -231,9 +243,16 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         background: linear-gradient(to bottom,  #ced7e0 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ced7e0', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
     }
-
+    .standard.hero__attorneys div{
+        height: 163px;
+    }
+    .webp .standard.hero__attorneys div{
+        background: url(/img/hero-group-mobile.webp) no-repeat center;
+    }
+    .no-webp .standard.hero__attorneys div{
+        background: url(/img/hero-group-mobile.png) no-repeat center;
+    }
     .hero {
-        color: #0c1c42;
         display: -webkit-flex;
         display: flex;
         -webkit-justify-content: center;
@@ -253,7 +272,6 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
     .hero__headline {
         border: 0 solid #fff;
-        font-weight: 900;
         padding-top: 10px;
         margin: 0 auto;
         max-width: 500px;
@@ -263,7 +281,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     .hero__headline h1,
     .hero__headline h2 {
         border: 0 solid #ccc;
-        color: #0c1c42;
+        color: #3d4e68;
         font-size: 10px;
         width: 100%
     }
@@ -282,13 +300,12 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
     .headline__big-text {
         font-size: 9px;
-        font-weight: 900;
         line-height: 1
     }
 
     @media only screen and (min-width:768px) {
         .standard.hero-wrap {
-            background-image: url(/img/hero-bg-desktop.jpg);
+            background-image: url('/img/hero-bg-desktop.jpg');
             background-size: cover
         }
         .standard .hero__left {
@@ -370,6 +387,8 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     .headline__big-text2 {
         opacity: 0
     }
+
+
 </style>
 
 
