--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'practice_area_icons';
+    src: url('../fonts/practice_area_icons.eot');
+    src: url('../fonts/practice_area_icons.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/practice_area_icons.woff') format('woff'),
+    url('../fonts/practice_area_icons.ttf') format('truetype'),
+    url('../fonts/practice_area_icons.svg#practice_area_icons') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 .container1 {
     padding: 20px 0;
     margin: auto;
@@ -380,6 +390,30 @@ p.subhero__no-win-desktop-no-win-text {
         display: block
     }
 }
+.mobile-column-wrap{
+    max-width: 414px;
+    margin:auto;
+}
+.herolower__wrap{
+    width: 100%;
+    background: #e9e9e9;
+}
+.herolower{
+    display: flex;
+    padding: 10px;
+    justify-content: space-around;
+}
+.herolower__leftblock{
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.herolower__text{
+    line-height: 1;
+}
+.herolower__rightblock{
+}
 
 .whywlf {
     background: #0c1c42;
@@ -392,7 +426,7 @@ p.subhero__no-win-desktop-no-win-text {
     align-items: center;
     display: -webkit-flex;
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
 
 .recovered__container,
@@ -415,7 +449,7 @@ p.subhero__no-win-desktop-no-win-text {
 .featured-result>div {
     margin-left: auto;
     margin-right: auto;
-    width: 45%
+    width: 45% ;
 }
 
 .featured-result h3 {
@@ -1164,7 +1198,15 @@ section.capabilities {
         padding: 10px 15px
     }
 }
-
+.specialty{
+    height: 50vw;
+    text-align: center;
+    width: 33.3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 @media only screen and (max-width:767px) {
     .our-attorneys {
         padding-bottom: 0
