current work in progress

--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,30 +1,30 @@
 <section class="capabilities">
     <div class="container practice-areas">
-        <h2 class="text-center"><span style="">WHAT WE CAN DO FOR YOU</span></h2>
-        <div class="what-we-can-do-container">
+        <h2 class="text-center font-weight-semi">WHAT WE CAN DO FOR YOU</h2>
+        <div class="what-we-can-do-container mobile-column-wrap">
             <div class="specialty">
-                <div class="capability capability__max-compensation icon-cash_advance">
+                <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
-                <span class="capability__message">Receive Maximum Compensation</span>
+                <span class="capability__message">Receive Maximum<br />Compensation</span>
             </div>
             <div class="specialty">
-                <div class="capability capability__medical-paid icon-staff-of-hermes">
+                <div class="capability capability__medical-paid icon-privacy">
                 </div>
-                <span class="capability__message">Discrete And Professional</span>
+                <span class="capability__message">Discrete And<br />Professional</span>
             </div>
             <div class="specialty">
-                <div class="capability capability__cash-advance icon-cash_icon">
+                <div class="capability capability__cash-advance icon-come2you">
                 </div>
-                <span class="capability__message">We'll Come To You</span>
+                <span class="capability__message">We'll Come<br />To You</span>
             </div>
 
             <div class="specialty">
-                <div class="capability capability__income-recovery icon-pay_off_medical_bills">
+                <div class="capability capability__income-recovery icon-lost-wages">
                 </div>
-                <span class="capability__message">Recovery Of Lost Wages</span>
+                <span class="capability__message">Recovery Of<br />Lost Wages</span>
             </div>
             <div class="specialty">
-                <div class="capability capability__fix-car icon-complementary_transportation">
+                <div class="capability capability__fix-car icon-justice">
                 </div>
                 <span class="capability__message">Justice</span>
             </div>
