--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -5,7 +5,7 @@
   <div class="container-fluid u-remove-all-padding">
 
     <!-- mobile header -->
-    <div class="mobile header d-md-none">
+    <div class="mobile header d-md-none mobile-column-wrap">
       <section class="section-header-logo">
         <picture>
           <source data-srcset="{{ .Site.BaseURL }}img/WLF_96px-03.webp" type="image/webp" class="img-fluid">
@@ -41,7 +41,7 @@
         <?=$hablamos24__block2?>
       </div>
       <div class="header__chatwidget header__text1">
-        <img src="<?php echo get_stylesheet_directory_uri(); ?>/homepage-2019/assets/images/lp19v3/Chat_Widget.svg" data-src="<?php echo get_stylesheet_directory_uri(); ?>/homepage-2019/assets/images/lp19v3/Chat_Widget.svg" class="img-fluid" alt="">
+<!--        <img src="<?php echo get_stylesheet_directory_uri(); ?>/homepage-2019/assets/images/lp19v3/Chat_Widget.svg" data-src="<?php echo get_stylesheet_directory_uri(); ?>/homepage-2019/assets/images/lp19v3/Chat_Widget.svg" class="img-fluid" alt="">-->
         <div>CHAT<br />WITH US</div>
       </div>
     </div>
