--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -2,23 +2,23 @@
     <div class="container-fluid u-remove-all-padding">
         <section class="hero">
             <div class="hero__left">
-                <div class="hero__headline">
+                <div class="hero__headline mobile-column-wrap">
                     <h1 class="d-sm-block d-md-none">
-                        <div class="headline__big-text big_text1">
+                        <div class="headline__big-text font-weight-semi big_text1">
                             <span>YOU DON'T PAY</span>
                             <span>UNLESS YOU WIN</span>
                         </div>
                     </h1>
-                    <h2 class="d-sm-block d-md-none headline__big-text big_text2">
+                    <h2 class="d-sm-block d-md-none headline__big-text big_text2 font-weight-regular">
                         <span>Award-Winning <span class="insertKW">Personal Injury Lawyers</span></span>
                     </h2>
                     <h1 class="d-none d-md-block">
-                        <div class="headline__big-text big_text3">
+                        <div class="headline__big-text font-weight-semi big_text3">
                             <span>YOU DON'T PAY UNLESS YOU WIN</span>
                         </div>
                     </h1>
                     <h2 class="d-none d-md-block">
-                        <div class="headline__big-text2 big_text4">
+                        <div class="headline__big-text2 font-weight-regular big_text4">
                             <div>Award-Winning  <span class="insertKW">Car Accident Lawyers</span></div>
                         </div>
                     </h2>
