--- a/site/layouts/partials/recovered-mobile.html
+++ b/site/layouts/partials/recovered-mobile.html
@@ -1,7 +1,7 @@
 <section class="recovered d-sm-block d-md-none">
   <div class="container u-remove-all-padding">
-    <div class="recovered__container subhero__recovered-text1">
-      <span>OVER $400 MILLION</span>
+    <div class="mobile-column-wrap recovered__container subhero__recovered-text1">
+      <span>MORE THAN $400M</span>
       <span>RECOVERED FOR OUR CLIENTS</span>
     </div>
   </div>
