--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -17,7 +17,7 @@
   <div class="visible-xs visible-sm">
     <div class="mobile-call-pop text-center">
       <a class="mobile-call-btn capPhone" href="tel:8553350244" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Mobile Footer - 8553350244'});">
-        <i class="fa fa-phone-volume"></i> TAP TO CALL
+        <i class="icon-tap2call"></i> <span class="tap-to-call-text">TAP TO CALL NOW</span>
       </a>
       <!--<span class="available white">AVAILABLE NOW</span>-->
     </div>
