--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -22,7 +22,7 @@
 
 {{ partial "recovered-mobile.html" . }}
 
-{{ partial "testimonials.html" . }}
+{{ partial "as-seen-on.html" . }}
 
 {{ partial "swap-text-form.html" . }}
 
