--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -24,6 +24,8 @@
 
 {{ partial "as-seen-on.html" . }}
 
+{{ partial "whywlf.html" . }}
+
 {{ partial "swap-text-form.html" . }}
 
 {{ partial "footer.html" . }}
