--- a/site/layouts/partials/as-seen-on.html
+++ b/site/layouts/partials/as-seen-on.html
@@ -1,5 +1,5 @@
 <div class="subhero__as-seen-on mobile-column-wrap">
-    <p class="text-left">And recognized in:</p>
+    <span class="text-left">And recognized in:</span>
     <div class="subhero__as-seen-on-icons images-in-a-row">
 
         <div class="icon-latimes"></div>
