--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -24,6 +24,10 @@
 
 {{ partial "whywlf.html" . }}
 
+{{ partial "video.html" . }}
+
+{{ partial "form.html" . }}
+
 {{ partial "swap-text-form.html" . }}
 
 {{ partial "footer.html" . }}
