test page speed after removing video

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -24,7 +24,7 @@
 
 {{ partial "whywlf.html" . }}
 
-{{ partial "video.html" . }}
+<!--{{ partial "video.html" . }}-->
 
 {{ partial "form.html" . }}
 
