--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -8,27 +8,27 @@
             </div>
             <div class="form-group">
                 <label for="firstName_bottom">First Name</label>
-                <input  name="firstName" class="form-control" id="firstName_bottom" placeholder="First Name" aria-label="Enter Your First Name">
+                <input  name="firstName" class="form-control wlf-form--empty" id="firstName_bottom" placeholder="First Name" aria-label="Enter Your First Name">
                 <div class="messages"></div>
             </div>
             <div class="form-group">
                 <label for="lastName_bottom">Last Name</label>
-                <input name="lastName" class="form-control" id="lastName_bottom" placeholder="Last Name" aria-label="Enter Your Last Name">
+                <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom" placeholder="Last Name" aria-label="Enter Your Last Name">
                 <div class="messages"></div>
             </div>
             <div class="form-group">
                 <label for="phone_bottom">Phone</label>
-                <input name="phone" type="tel" class="form-control bfh-phone" data-country="US" id="phone_bottom" placeholder="Phone" aria-label="Enter Your Phone">
+                <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty" data-country="US" id="phone_bottom" placeholder="Phone" aria-label="Enter Your Phone">
                 <div class="messages"></div>
             </div>
             <div class="form-group">
                 <label for="email_bottom">Email</label>
-                <input name="email" type="email" class="form-control" id="email_bottom" placeholder="Email" aria-label="Enter Your Email">
+                <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom" placeholder="Email" aria-label="Enter Your Email">
                 <div class="messages"></div>
             </div>
             <div class="form-group">
                 <label for="bottom-form-textarea">Tell Us How We Can Help You</label>
-                <textarea name="description" class="form-control" id="bottom-form-textarea" rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You" aria-label="Tell Us How We Can Help You"></textarea>
+                <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea" rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You" aria-label="Tell Us How We Can Help You"></textarea>
                 <div class="messages"></div>
             </div>
             <div class="form-group">
