--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="webp">
 <head>
 	<meta name="description" content="Wilshire Law Firm is a award-winning personal injury, car accident, employment &amp; class action law firm. GET HELP TODAY!">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
 	{{ partial "head.html" . }}
 
 </head>
